Update frontend, backend, and dependencies for new featuresv1

--- a/index.html
+++ b/index.html
@@ -1189,4 +1189,5 @@
         // Fetch past readings on page load
         window.addEventListener('load', fetchPastReadings);
     </script>
-</body
+</body>
+</html>
